# adf_to_lakeflow_jobs_migration_validator

./: .gitignore  Makefile  README.md  pyproject.toml
apps/: __init__.py
dev/: plan-lmv-lf20-crp11-wrapper-adapter.md  wkmigrate-alpha1-replay-handoff.md  wkmigrate-handoff-ledger.md  wkmigrate-issue-map.json
docs/: 00-implementation-sequence.md  01-conversion-validator-spec.md  01-conversion-validator.md  03-validator-factory.md  agent-synthetic-generator-spec.md  analysis-validator-agents.md  architecture.md  decisions.md  implementation-status.md  provisioning.md  testing-wkmigrate-with-lmv.md  wkmigrate-config.md
golden_sets/: adversarial_loop_discovered.json  adversarial_seeds_round1.json  batch_results_175_pipelines.json  big_pipeline_corpus.json  calibration_pairs.json  campaign_a_deep_discovery.json  campaign_a_final.json  campaign_a_post_fix.json  campaign_a_post_fix_v2.json  campaign_a_post_w11.json  campaign_a_structural_templates.json  expression_loop_post_w14.json  expression_loop_post_w15_w16.json  expression_loop_post_w16.json  expression_loop_run1.json  expression_loop_run2.json  expressions.json  expressions_adversarial.json  extreme_expression_pipelines.json  extreme_harness_results.txt  extreme_harness_results_v2.txt  overnight_adversarial.json  pipelines.json  regression_pipelines.json  semantic_eval_all_contexts_summary.json  semantic_eval_post_w17_w18.json  semantic_eval_results.json  semantic_eval_results_fresh.json  semantic_eval_results_full_fresh.json  semantic_eval_results_w28.json
knowledge/: INDEX.md  adf-expressions.md  adf-to-python-mappings.md  cost-model.md  failure-modes.md  lakeflow-jobs-patterns.md  (+31 more)
(+178 files in other folders)
